--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "devDependencies": {
+    "mocha": "^2.1.0"
+  },  
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
