--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "devops",
-  "version": "0.0.0",
+  "name": "IBMDevOps",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -15,6 +15,9 @@
     "express": "~4.15.2",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "nib": "^1.0.4",
+    "stylus": "^0.49.1",
+    "jade": "^1.7.0"
   }
 }
